# docassemble-LetterToEmployerActivation

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/LetterToEmployerActivation/data/questions/: initial_notification.yml  letter_to_employer__activation.yml  letter_to_employer_return.yml
docassemble/LetterToEmployerActivation/data/templates/: letter_to_employer__activation_next_steps.docx  letter_to_employer_activation.docx  letter_to_employer_initial.docx  letter_to_employer_return.docx
